# avml

./: .azure-pipelines.yml  .gitignore  .typos.toml  Cargo.toml  README.md  RELEASE_PROCESS.md
.github/: dependabot.yml  fabricbot.json
.github/policies/: resourceManagement.yml
.github/workflows/: build.yml
eng/: build-armv6b.sh  build.sh  ci.sh  images.txt  lint.sh  release.sh  run.sh  setup.sh  test-azure-image.sh  test-conversion.sh  test-on-azure.sh
eng/targets/: armv5te-unknown-linux-musleabi.json
src/: blobstore.rs  disk_usage.rs  errors.rs  image.rs  iomem.rs  lib.rs  main.rs  snapshot.rs  upload.rs  write_counter.rs
src/io/: counter.rs  mod.rs  snappy.rs
src/snapshots/: avml__disk_usage__tests__estimates-2.snap  avml__disk_usage__tests__estimates.snap  avml__iomem__tests__merge_ranges-2.snap  avml__iomem__tests__merge_ranges.snap  avml__iomem__tests__split_ranges-2.snap  avml__iomem__tests__split_ranges-3.snap  avml__iomem__tests__split_ranges.snap
src/upload/: blobstore.rs  http.rs  mod.rs  status.rs  stream.rs
test/: images-demo.txt  images.txt  iomem-2.txt  iomem-3.txt  iomem-4.txt  iomem-5.txt  iomem.txt  release.sh  run.sh  test-azure-image.sh  test-conversion.sh
tests/: blob_stream_abort.rs  symlink_output.rs
