[package]
name = "avml"
version = "0.15.0"
license = "MIT"
description = "A portable volatile memory acquisition tool"
authors = ["avml@microsoft.com"]
keywords = ["linux", "memory-forensics", "security"]
categories = ["command-line-utilities"]
homepage = "https://github.com/microsoft/avml"
repository = "https://github.com/microsoft/avml"
readme = "README.md"
edition = "2024"
rust-version = "1.85.0"

[features]
default = ["put", "blobstore", "native-tls"]
put = ["dep:reqwest", "reqwest?/stream", "dep:url", "dep:tokio", "dep:tokio-util"]
blobstore = ["dep:url", "dep:azure_core", "dep:azure_storage_blobs", "dep:tokio", "dep:tokio-util", "dep:async-channel"]
status = ["dep:indicatif"]
native-tls = ["dep:native-tls"]

[dependencies]
byteorder = "1.5"
bytes = "1.10"
clap = {version="4.5", default-features=false, features=["derive", "std", "usage", "error-context", "help"]}
elf = "0.7"
futures = "0.3"
http = "1.3"
snap = "1.1"
thiserror = "2.0"
libc = "0.2"

async-channel = {version="2.3", optional=true}
azure_core = {version="0.21", optional=true, default-features=false}
azure_storage_blobs = {version="0.21", optional=true, default-features=false}
indicatif = {version="0.17", optional=true, default-features=false}
native-tls = {version="0.2", features=["vendored"], optional=true, default-features=false}
reqwest = {version="0.12", optional=true, default-features=false}
tokio = {version="1.44", default-features=false, optional=true, features=["fs", "rt-multi-thread", "io-util"]}
tokio-util = {version="0.7", features=["codec"], optional=true, default-features=false}
url = {version="2.5", optional=true, default-features=false}

[dev-dependencies]
insta = {version="1.42", features=["json"]}

[profile.release]
opt-level="z"
lto=true
panic="abort"
codegen-units=1

[[bin]]
name = "avml-upload"
required-features = ["put", "blobstore"]
